<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ie.jameswalshirl.demo.WelcomePage">

    <Button
        android:id="@+id/mybutton1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/mybutton2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/click_me_too"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/label"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/text_area"
        android:text="@string/type_something_here"/>

</LinearLayout>
